k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kurrent-ui-service
spec:
  type: ClusterIP
  selector:
    app: kurrent-ui
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
